Pronto para CONFLITAR

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>BASE</h1>
+    <div>
+        <p>Nome: Henrique Izzi</p>
+        <p>rickizzisj</p>
+
+    </div>
 </body>
 </html>
