--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <p> Anime: </p>
         <p> Dragon ball </p>
 
+        <p> Filmes: </p>
+        <p> Protetor </p>
     </div>
 </body>
 </html>
