Criando o header e tag nav

--- a/base/index.html
+++ b/base/index.html
@@ -6,6 +6,11 @@
     <title>INICIO</title>
 </head>
 <body>
+    <header>
+        <nav>
+            
+        </nav>
+    </header>
     <div>
         <h1>BASE</h1>
     </div>
