--- a/base/index.html
+++ b/base/index.html
@@ -8,7 +8,11 @@
 <body>
     <header>
         <nav>
-            
+            <ul>
+                <li><a href="img/">Balão com ponto de interrogação</a></li>
+                <li><a href="img/"></a>Balão de informação</li>
+                <li><a href="img/"></a>Email</li>
+            </ul>
         </nav>
     </header>
     <div>
