--- a/base/index.html
+++ b/base/index.html
@@ -9,9 +9,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="img/">Balão com ponto de interrogação</a></li>
-                <li><a href="img/"></a>Balão de informação</li>
-                <li><a href="img/"></a>Email</li>
+                <li><a href="./img/">alt="Balão para ajuda"</a>
+                <a href="./img/">>alt="Balão de informação"</a>
+                <a href="./img/">alt="Email"</a></li>
             </ul>
         </nav>
     </header>
