--- a/base/index.html
+++ b/base/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INICIO</title>
 </head>
+
 <body>
-    <div>
-        <h1>BASE</h1>
-    </div>
+    <main>
+        <section class="section-about">
+
+        </section>
+    </main>
 </body>
+
 </html>
