Editando os links.

--- a/base/index.html
+++ b/base/index.html
@@ -10,9 +10,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./img/">alt="Balão para ajuda"</a>
-                <a href="./img/">>alt="Balão de informação"</a>
-                <a href="./img/">alt="Email"</a></li>
+                <li><a href="./img/">alt="Balão para ajuda"</a> </li>
+                <li><a href="./img/">>alt="Balão de informação"</a></li>
+                <li><a href="./img/">alt="Email"</a></li>
             </ul>
         </nav>
     </header>
