Adicionando img no index.

--- a/base/index.html
+++ b/base/index.html
@@ -10,9 +10,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./img/">alt="Balão para ajuda"</a> </li>
-                <li><a href="./img/">>alt="Balão de informação"</a></li>
-                <li><a href="./img/">alt="Email"</a></li>
+                <li><a href="./img/contato.png">alt="Balão para ajuda"</a> </li>
+                <li><a href="./img/sobre.png">>alt="Balão de informação"</a></li>
+                <li><a href="./img/email.png">alt="Email"</a></li>
             </ul>
         </nav>
     </header>
