--- a/base/index.html
+++ b/base/index.html
@@ -8,10 +8,14 @@
     <body>
         <div class ="container">
             <h1>HELP</h1>
+            
     
             <p>
             A plataforma Help da ACNUR é um portal online que oferece informações e recursos para refugiados no Brasil. Seu objetivo é facilitar o acesso a informações confiáveis e atualizadas sobre diversos temas relevantes para a integração local, como regularização de documentos, saúde, educação, moradia, emprego, serviços sociais, prevenção à violência, cultura e lazer. A plataforma está disponível em português, espanhol, inglês, francês e árabe e conta com um sistema de busca para facilitar a navegação. A missão da plataforma Help é empoderar refugiados para uma vida autônoma no Brasil, garantindo o acesso a direitos básicos e promovendo a inclusão social.
             </p>
+            <nav>
+                <a href=""><img src="./img/ajuda.png" alt="Ponto de interrogação"></a>
+            </nav>
 
         </div>
     </body>
