--- a/base/index.html
+++ b/base/index.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/estilo.css">
     <title>INICIO</title>
 </head>
 <body>
     <div>
         <h1>BASE</h1>
+        <!--Criar div do direito da tela e altura centralizada cor cinza-->
+        <div class="div-cadastro">
+            <h2>Cadastro</h2>
+        
+    
+
     </div>
 </body>
 </html>
