Botões do footer.

--- a/base/index.html
+++ b/base/index.html
@@ -9,5 +9,10 @@
     <div>
         <h1>BASE</h1>
     </div>
+    <nav>
+        <a href="https://www.github.com" target="_blank">github</a>
+        <a href="https://www.google.com" target="_blank">google</a>
+        <a href="https://twitter.com/" target="_blank">Twitter</a>
+    </nav>
 </body>
 </html>
