caixas de cadastro

--- a/base/index.html
+++ b/base/index.html
@@ -3,11 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/estilo.css">
     <title>INICIO</title>
 </head>
 <body>
     <div>
-        <h1>BASE</h1>
+        <form>
+            <div>
+            <label for="idNm"></label>
+            <input class="box"
+                    type="text"
+                    name="txtNm"
+                    id="idNm"
+                    placeholder="Nome Completo"
+                  />
+            </div>
+            <div>
+                <span class="atencao">*campo obrigatorio</span>
+            </div>
+            <br/>
+            <br/>
+            <div>
+                  <label for="idEmail"></label>
+                  <input class="box"
+                    type="email"
+                    name="txtEmail"
+                    id="idEmail"
+                    placeholder="Email"
+                  />
+            </div>
+            <div>
+                <span class="atencao">*campo obrigatorio</span>
+            </div>
+        </form>
     </div>
 </body>
 </html>
