--- a/base/index.html
+++ b/base/index.html
@@ -11,9 +11,9 @@
         <h1>PROTÓTIPO</h1>
         <nav>
             <ul>
-                <li><a href="#"><img src="./img/contato.png" alt="imagem representativa da página contato."></a></li>
-                <li><a href="#"><img src="./img/sobre.png" alt="imagem representativa da página sobre."></a></li>
-                <li><a href="#"><img src="./img/email.png" alt="imagem representativa que leva ao e-mail."></a></li>
+                <li><a href="../prototipo/paginas/contato"><img src="./img/contato.png" alt="imagem representativa da página contato."></a></li>
+                <li><a href="../prototipo/paginas/sobre"><img src="./img/sobre.png" alt="imagem representativa da página sobre."></a></li>
+                <li><a href="../prototipo/paginas/email"><img src="./img/email.png" alt="imagem representativa que leva ao e-mail."></a></li>
             </ul>
         </nav>
     </header>
