--- a/base/index.html
+++ b/base/index.html
@@ -12,6 +12,10 @@
     <main>
         <section class="section-about">
         <h2 class="about-h2">About</h2>
+        <p class="texto-about"> 
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit sed et accusantium ipsa nemo non quis soluta totam dolorem sint. Ducimus neque accusantium, a natus repellendus labore optio consectetur maiores porro harum, perspiciatis, fugit explicabo enim ipsam recusandae est inventore laborum dicta perferendis ea temporibus eligendi doloremque mollitia. Unde, eveniet voluptate. Aspernatur doloribus minus tempore cum magnam mollitia odio eum eligendi assumenda inventore ex omnis asperiores provident laudantium esse modi, cupiditate a voluptatum voluptates libero ipsam autem reprehenderit dolore! Adipisci cumque autem accusantium, delectus neque voluptatibus consequuntur quae dolorum nostrum molestiae minima deleniti explicabo reprehenderit corrupti aperiam officia! Asperiores, id.
+    
+        </p>
         </section>
     </main>
 </body>
