--- a/base/index.html
+++ b/base/index.html
@@ -12,7 +12,7 @@
         <!--Criar div do direito da tela e altura centralizada cor cinza-->
         <div class="div-cadastro">
             <h2>Cadastro</h2>
-        
+        <button type="button" class="button-send"> Send</button>
     
 
     </div>
