--- a/base/index.html
+++ b/base/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INICIO</title>
+    <link rel="stylesheet" href="./css/estilo.css">
 </head>
     <body>
         <div id ="container">
@@ -15,7 +16,7 @@
                     <ul>
                         <li>
                             <a href="">
-                                <img src="./img/ajuda.png" alt="Ponto de interrogação">
+                                <img class ="imagem" src="./img/ajuda.png" alt="Ponto de interrogação">
                             </a>
                         </li>
                     </ul>
