--- a/base/index.html
+++ b/base/index.html
@@ -1,30 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>INICIO</title>
-    <link rel="stylesheet" href="css/estilo.css">
-</head>
+    <link rel="stylesheet" href="css/estilo.css" />
+  </head>
 
-<body>
+  <body>
     <main>
-        <section class="section-about">
-            <h2 class="about-h2">ABOUT</h2>
-            <p class="texto-about">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit sed et accusantium ipsa nemo non quis
-                soluta totam dolorem sint. Ducimus neque accusantium, a natus repellendus labore optio consectetur
-                maiores porro harum, perspiciatis, fugit explicabo enim ipsam recusandae est inventore laborum dicta
-                perferendis ea temporibus eligendi doloremque mollitia. Unde, eveniet voluptate. Aspernatur doloribus
-                minus tempore cum magnam mollitia odio eum eligendi assumenda inventore ex omnis asperiores provident
-                laudantium esse modi, cupiditate a voluptatum voluptates libero ipsam autem reprehenderit dolore!
-                Adipisci cumque autem accusantium, delectus neque voluptatibus consequuntur quae dolorum nostrum
-                molestiae minima deleniti explicabo reprehenderit corrupti aperiam officia! Asperiores, id.
-
-            </p>
-        </section>
+      <section class="section-about">
+        <ul class="img-exclamcao">
+          <a href="#about">
+            <img
+              src="./img/exclamacao.png"
+              alt="Circulo com a exclamação preta no meio."
+            />
+          </a>
+        </ul>
+        <h2 class="about-h2">ABOUT</h2>
+        <p class="texto-about">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit sed
+          et accusantium ipsa nemo non quis soluta totam dolorem sint. Ducimus
+          neque accusantium, a natus repellendus labore optio consectetur
+          maiores porro harum, perspiciatis, fugit explicabo enim ipsam
+          recusandae est inventore laborum dicta perferendis ea temporibus
+          eligendi doloremque mollitia. Unde, eveniet voluptate. Aspernatur
+          doloribus minus tempore cum magnam mollitia odio eum eligendi
+          assumenda inventore ex omnis asperiores provident laudantium esse
+          modi, cupiditate a voluptatum voluptates libero ipsam autem
+          reprehenderit dolore! Adipisci cumque autem accusantium, delectus
+          neque voluptatibus consequuntur quae dolorum nostrum molestiae minima
+          deleniti explicabo reprehenderit corrupti aperiam officia! Asperiores,
+          id.
+        </p>
+      </section>
     </main>
-</body>
-
+  </body>
 </html>
