Ul trocado pelo a

--- a/base/index.html
+++ b/base/index.html
@@ -11,14 +11,14 @@
   <body>
     <main>
       <section class="section-about">
-        <ul class="img-exclamcao">
-          <a href="#about">
+       
+          <a class="img-about" href="#about">
             <img
               src="./img/exclamacao.png"
-              alt="Circulo com a exclamação preta no meio."
+              alt="Circulo com exclamação preta no meio."
             />
           </a>
-        </ul>
+       
         <h2 class="about-h2">ABOUT</h2>
         <p class="texto-about">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit sed
