--- a/base/index.html
+++ b/base/index.html
@@ -9,15 +9,14 @@
     <body>
         <main>
             <section>
-                <div class="logo-help">
+                <div id ="container">
+                    <div class="logo-help">
                         <a href="">
                             <img src="./img/ajuda.png" alt="Ponto de interrogação">
                         </a>
-                <div id ="container">
-                    <h1>HELP</h1>
                 </div>
-                
-                <p>
+                <h1 class="titulo-help">HELP</h1>
+                <p class="texto-help">
                     A plataforma Help da ACNUR é um portal online que oferece informações e recursos para refugiados no Brasil. Seu objetivo é facilitar o acesso a informações confiáveis e atualizadas sobre diversos temas relevantes para a integração local, como regularização de documentos, saúde, educação, moradia, emprego, serviços sociais, prevenção à violência, cultura e lazer. A plataforma está disponível em português, espanhol, inglês, francês e árabe e conta com um sistema de busca para facilitar a navegação. A missão da plataforma Help é empoderar refugiados para uma vida autônoma no Brasil, garantindo o acesso a direitos básicos e promovendo a inclusão social.
                 </p>
                 
