Mudanças no css e no index para alinhamento dos projetos.

--- a/base/index.html
+++ b/base/index.html
@@ -7,23 +7,20 @@
     <link rel="stylesheet" href="./css/estilo.css">
 </head>
     <body>
-        <main>
-            <section>
-                <div id ="container">
-                    <div class="logo-help">
-                        <a href="">
-                            <img src="./img/ajuda.png" alt="Ponto de interrogação">
-                        </a>
-                </div>
-                <h1 class="titulo-help">HELP</h1>
+        <div id ="container">
+            <div class="logo-help">
+                <a href="">
+                    <img src="./img/ajuda.png" 
+                    alt="Ponto de interrogação">
+                </a>
+            </div>
+                <h1 class="titulo-help">  HELP</h1>
                 <p class="texto-help">
-                    A plataforma Help da ACNUR é um portal online que oferece informações e recursos para refugiados no Brasil. Seu objetivo é facilitar o acesso a informações confiáveis e atualizadas sobre diversos temas relevantes para a integração local, como regularização de documentos, saúde, educação, moradia, emprego, serviços sociais, prevenção à violência, cultura e lazer. A plataforma está disponível em português, espanhol, inglês, francês e árabe e conta com um sistema de busca para facilitar a navegação. A missão da plataforma Help é empoderar refugiados para uma vida autônoma no Brasil, garantindo o acesso a direitos básicos e promovendo a inclusão social.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum inventore, consectetur aut, fuga obcaecati, voluptate harum mollitia explicabo suscipit facilis neque? Porro fuga ullam numquam quidem optio illo quod non excepturi sapiente neque voluptas quasi?
                 </p>
                 
-                <hr>
-        
-                </div>
-            </section>
-        </main>
+            </div>
+
+        <hr>
     </body>
 </html>
