Atualização no Header

--- a/base/index.html
+++ b/base/index.html
@@ -15,7 +15,7 @@
   <body>
   
     <header>
-        <h1>PROTÓTIPO</h1>
+        <h1 class="titulo">PROTÓTIPO</h1>
         <nav>
             <ul>
                 <li><a href="../prototipo/paginas/contato"><img src="./img/contato.png" alt="imagem representativa da página contato."></a></li>
