Alteraçao disposição dos arquivos.
Co-authored-by: Nik <Andenik@users.noreply.github.com>
Co-authored-by: Ericsot <Ericsot@users.noreply.github.com>
Co-authored-by: B3rg4r4 <B3rg4r4@users.noreply.github.com>
Co-authored-by: Robert <Danie-Anx@users.noreply.github.com>
Co-authored-by: C4zin <C4zin@users.noreply.github.com>

--- a/base/index.html
+++ b/base/index.html
@@ -32,6 +32,7 @@
                 </div>
                 <br/>
                 <br/>
+                <!--teste-->
                 <div>
                       <label for="idEmail"></label>
                       <input class="box"
