--- a/base/index.html
+++ b/base/index.html
@@ -11,7 +11,7 @@
         <h1>BASE</h1>
         <!--Criar div do direito da tela e altura centralizada cor cinza-->
         <div class="div-cadastro">
-            <h2>Cadastro</h2>
+            <h2>CADASTRO</h2>
 
         <button type="button" class="button-send"> Send</button>
     
@@ -25,7 +25,8 @@
                         name="txtNm"
                         id="idNm"
                         placeholder="Nome Completo"
-                      />
+                        required
+                      >
                 </div>
                 <div>
                     <span class="atencao">*campo obrigatorio</span>
@@ -40,7 +41,8 @@
                         name="txtEmail"
                         id="idEmail"
                         placeholder="Email"
-                      />
+                        pattern="[A-Za-z0-9]{3}" required
+                      >
                 </div>
                 <div>
                     <span class="atencao">*campo obrigatorio</span>
