--- a/base/index.html
+++ b/base/index.html
@@ -13,7 +13,7 @@
         <div class="div-cadastro">
             <h2>CADASTRO</h2>
             <form>
-                <button type="button" class="button-send"> Send </button>
+                <button type="submit" class="button-send"> Send </button>
                 <div>
                 <label for="idNm"></label>
                 <input class="box"
