Adição e Estilização do Ícone "ABOUT"

--- a/base/index.html
+++ b/base/index.html
@@ -6,24 +6,26 @@
   <meta name="viewport" content="width:device-width,initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/estilo.css">
-  <title>CheckPoint 1</title>
+  <title>About</title>
 </head>
 
 <!-- Grupo Cabeçalho -->
 <header>
-header
+Insira Aqui o Cabeçalho
 </header>
 
 <!-- Flex Grupos Help|About|Cadastro -->
 <div class="container">
   <div class="container-esquerdo">
       <div class="item help">
-        
-        Help
-
+        Insira Aqui o Help
       </div>
       <div class="item about">
-        <h1 class="titulo-about">ABOUT</h1>
+        <h1 class="titulo-about">ABOUT
+          <a class="img-about">
+            <img src="./img/exclamacao.png" href="#about" alt="Circulo com exclamação preta no meio."/>
+          </a>
+        </h1>
         <p>
           Lorem Ipsum is simply dummy text of the printing and
           typesetting industry. Lorem Ipsum has been the
