Adição e Estilização do Botão "Mais..."

--- a/base/index.html
+++ b/base/index.html
@@ -33,16 +33,18 @@ Insira Aqui o Cabeçalho
           when an unknown printer took a galley of type and
           scrambled it to make a type specimen book.
         </p>
+        <div class="botao-mais">
+          <button type="mais" class="mais"> Mais... </button>
+        </div>
+        </nav>
       </div>
     </div>
-  <div class="item cadastro">
-    
-    Cadastro
-
+  <div class="item cadastro"> 
+  Insira Aqui o Cadastro
   </div>
 </div>
 
 <!-- Grupo Rodapé -->
 <footer>
-footer
+Insira Aqui o Rodapé
 </footer>
