Criação da Página About, Remoção do Botão "Mais..." e Pequenos Ajustes.

--- a/base/index.html
+++ b/base/index.html
@@ -6,46 +6,42 @@
   <meta name="viewport" content="width:device-width,initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/estilo.css">
-  <title>About</title>
+  <title>Index</title>
 </head>
 
-<!-- Grupo Cabeçalho -->
-<header>
-Insira Aqui o Cabeçalho
-</header>
+<body>
+  <!-- Grupo Cabeçalho -->
+  <header>
+  Insira Aqui o Cabeçalho
+  </header>
 
-<!-- Flex Grupos Help|About|Cadastro -->
-<div class="container">
-  <div class="container-esquerdo">
+  <!-- Flex Grupos Help|About|Cadastro -->
+  <div class="container">
+    <div class="container-esquerdo">
       <div class="item help">
         Insira Aqui o Help
       </div>
       <div class="item about">
         <hr>
-        <h1 class="titulo-about">ABOUT
-          <a class="img-about">
-            <img src="./img/exclamacao.png" href="#about" alt="Circulo com exclamação preta no meio."/>
-          </a>
-        </h1>
+        <h1 class="titulo-about">ABOUT</h1>
         <p>
-          Lorem Ipsum is simply dummy text of the printing and
-          typesetting industry. Lorem Ipsum has been the
-          industry's standard dummy text ever since the 1500s,
-          when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book.
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum exercitationem quae accusamus aspernatur. 
+          Necessitatibus, explicabo cumque voluptatem soluta dolorum doloribus consequuntur nobis, quo iure at ipsa 
+          deserunt quam unde accusamus culpa molestias natus temporibus error non sequi laborum impedit ut? Recusandae 
+          nostrum repellat dolorem voluptate alias deleniti, vero officia voluptatem!
         </p>
-        <div class="botao-mais">
-          <button type="mais" class="mais"> Mais... </button>
-        </div>
-        </nav>
+        <a class="img-about" href="./about.html" target="_blank" rel="noopener">
+          <img src="./img/exclamacao.png" alt="Botão de informação"/>
+        </a>
       </div>
     </div>
-  <div class="item cadastro"> 
-  Insira Aqui o Cadastro
+    <div class="item cadastro"> 
+    Insira Aqui o Cadastro
+    </div>
   </div>
-</div>
 
-<!-- Grupo Rodapé -->
-<footer>
-Insira Aqui o Rodapé
-</footer>
+  <!-- Grupo Rodapé -->
+  <footer>
+  Insira Aqui o Rodapé
+  </footer>
+</body>
