--- a/base/index.html
+++ b/base/index.html
@@ -13,7 +13,14 @@
 <body>
   <!-- Grupo Cabeçalho -->
   <header>
-  Insira Aqui o Cabeçalho
+    <h1 class="titulo">PROTÓTIPO</h1>
+    <nav>
+        <ul>
+            <li><a href="../prototipo/paginas/contato"><img src="./img/contato.png" alt="imagem representativa da página contato."></a></li>
+            <li><a href="../prototipo/paginas/sobre"><img src="./img/sobre.png" alt="imagem representativa da página sobre."></a></li>
+            <li><a href="../prototipo/paginas/email"><img src="./img/email.png" alt="imagem representativa que leva ao e-mail."></a></li>
+        </ul>
+    </nav>
   </header>
 
   <!-- Flex Grupos Help|About|Cadastro -->
@@ -38,7 +45,7 @@
 
    
 
-    <body>
+    </div>
         <div id ="container">
             <div class="logo-help">
                 <a href="">
@@ -54,37 +61,24 @@
             </div>
 
         <hr>
-    </body>
-</html>
 
-<body>    
+
+
+  
     <!-- Referência para colocar Favicon-->
     <!-- <link rel="icon" href="path"> -->
     <!-- Referência para colocar arquivos css-->
-  </head>
-
-  <body>
-  
-    <header>
-        <h1 class="titulo">PROTÓTIPO</h1>
-        <nav>
-            <ul>
-                <li><a href="../prototipo/paginas/contato"><img src="./img/contato.png" alt="imagem representativa da página contato."></a></li>
-                <li><a href="../prototipo/paginas/sobre"><img src="./img/sobre.png" alt="imagem representativa da página sobre."></a></li>
-                <li><a href="../prototipo/paginas/email"><img src="./img/email.png" alt="imagem representativa que leva ao e-mail."></a></li>
-            </ul>
-        </nav>
-    </header>
+ 
 
     <div>
 
         <!--Criar div do direito da tela e altura centralizada cor cinza-->
-        <!--><div class="div-cadastro">*Modificado<-->
+        <!--<div class="div-cadastro">*Modificado<-->
           <!-- inicio cadastro-->
           
 
 
-    <!--></div> *Modificado<-->
+    <!--</div> *Modificado<-->
     <div class="item cadastro"> 
       <h2>CADASTRO</h2>
             <form>
@@ -132,8 +126,6 @@
   Insira Aqui o Rodapé
   </footer>
 </body>
-
-  </body>
 </html>
 
 
