ajustando layout geral

--- a/base/index.html
+++ b/base/index.html
@@ -43,7 +43,23 @@
     <!-- Flex Grupos Help|About|Cadastro -->
     <div class="container">
       <div class="container-esquerdo">
-        <div class="item help">Insira Aqui o Help</div>
+        <div class="item help">
+          <!-- Insira Aqui o Help -->
+          <div id="container">
+            <div class="logo-help">
+              <a href="">
+                <img src="./img/ajuda.png" alt="Ponto de interrogação" />
+              </a>
+            </div>
+            <h1 class="titulo-help">HELP</h1>
+            <p class="texto-help">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
+              inventore, consectetur aut, fuga obcaecati, voluptate harum mollitia
+              explicabo suscipit facilis neque? Porro fuga ullam numquam quidem
+              optio illo quod non excepturi sapiente neque voluptas quasi?
+            </p>
+          </div>
+        </div>
         <div class="item about">
           <hr />
           <h1 class="titulo-about">ABOUT</h1>
@@ -65,20 +81,7 @@
           </a>
         </div>
       </div>
-      <div id="container">
-        <div class="logo-help">
-          <a href="">
-            <img src="./img/ajuda.png" alt="Ponto de interrogação" />
-          </a>
-        </div>
-        <h1 class="titulo-help">HELP</h1>
-        <p class="texto-help">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
-          inventore, consectetur aut, fuga obcaecati, voluptate harum mollitia
-          explicabo suscipit facilis neque? Porro fuga ullam numquam quidem
-          optio illo quod non excepturi sapiente neque voluptas quasi?
-        </p>
-      </div>
+      
 
       <hr />
 
@@ -133,7 +136,7 @@
       </div>
 
       <!-- Grupo Rodapé -->
-      <footer>Insira Aqui o Rodapé</footer>
     </div>
+    <footer>Insira Aqui o Rodapé</footer>
   </body>
 </html>
