Ajustado a parte help completamente.

--- a/base/index.html
+++ b/base/index.html
@@ -51,21 +51,25 @@
     <!-- Flex Grupos Help|About|Cadastro -->
     <div class="container">
       <div class="container-esquerdo">
-        <div class="item help">
+        <div class="item-help">
           <!-- Insira Aqui o Help -->
-          <div id="container">
-            <div class="logo-help">
-              <a href="">
-                <img src="./img/ajuda.png" alt="Ponto de interrogação" />
-              </a>
+          <div id="container-help">
+            <div class="conteudo-help">
+              <h1 class="titulo-help">HELP</h1>
+
+              <p class="texto-help">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
+                inventore, consectetur aut, fuga obcaecati, voluptate harum
+                mollitia explicabo suscipit facilis neque? Porro fuga ullam
+                numquam quidem optio illo quod non excepturi sapiente neque
+                voluptas quasi?
+              </p>
+              <div class="logo-help">
+                <a href="./help.html" target="_blank" rel="noopener">
+                  <img src="./img/ajuda.png" alt="Ponto de interrogação" />
+                </a>
+              </div>
             </div>
-            <h1 class="titulo-help">HELP</h1>
-            <p class="texto-help">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
-              inventore, consectetur aut, fuga obcaecati, voluptate harum mollitia
-              explicabo suscipit facilis neque? Porro fuga ullam numquam quidem
-              optio illo quod non excepturi sapiente neque voluptas quasi?
-            </p>
           </div>
         </div>
         <div class="item about">
