--- a/base/about.html
+++ b/base/about.html
@@ -9,8 +9,8 @@
 
   <body>
     <div>
-      <h1 style="padding: 20px 20px 20px 20px">ABOUT</h1>
-      <p style="padding: 0px 40px 40px 40px">
+      <h1 class="h1-about">ABOUT</h1>
+      <p class="p-about">
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid,
         labore! Repudiandae nisi minus magni totam ut corrupti vero, accusantium
         ipsa quo sunt et odit incidunt quisquam eaque. Assumenda eius, dolorum
